# captionaize

./: LICENSE.md  README.md  helper.py  pyproject.toml  requirements.txt  stApp.py
.streamlit/: config.toml
